--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <video autoplay loop>
-      <source src="/videos/mainvideo.mp4" type="video/mp4">
+      <source src="mainvideo.mp4" type="video/mp4">
     </video>
   </body>
 </html>
