--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     </style>
   </head>
   <body>
-    <video autoplay loop>
-      <source src="mainvideo.mp4" type="video/mp4">
-    </video>
+    <img src="image.png">
   </body>
 </html>
