--- a/index.html
+++ b/index.html
@@ -19,23 +19,8 @@
       window.onload = function() {
         document.getElementById("my_audio").play();
       }
-
-      function requestFullScreen(element) {
-    // Supports most browsers and their versions.
-    var requestMethod = element.requestFullScreen || element.webkitRequestFullScreen || element.mozRequestFullScreen || element.msRequestFullScreen;
-
-    if (requestMethod) { // Native full screen.
-        requestMethod.call(element);
-    } else if (typeof window.ActiveXObject !== "undefined") { // Older IE.
-        var wscript = new ActiveXObject("WScript.Shell");
-        if (wscript !== null) {
-            wscript.SendKeys("{F11}");
-        }
-    }
-}
-
-var elem = document.body; // Make the body go full screen.
-requestFullScreen(elem);
+      
+      document.requestFullscreen();
     </script>
   </body>
 </html>
