--- a/index.html
+++ b/index.html
@@ -2,23 +2,42 @@
 <html>
   <head>
     <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+      }
       img {
         position: absolute;
         top: 0;
         left: 0;
-        min-width: 100%;
-        min-height: 100%;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Ensures the image covers the entire viewport */
       }
     </style>
   </head>
   <body>
     <img id="imagem" src="image.png">
-    <audio id="my_audio" src="audio.mp3" loop="loop"></audio>
+    <audio id="my_audio" src="audio.mp3" loop></audio>
 
     <script>
       window.onload = function() {
-        document.getElementById("imagem").requestFullscreen();
-        document.getElementById("my_audio").play();
+        var img = document.getElementById("imagem");
+        var audio = document.getElementById("my_audio");
+
+        // Play the audio
+        audio.play();
+
+        // Request fullscreen for the image
+        if (img.requestFullscreen) {
+          img.requestFullscreen();
+        } else if (img.webkitRequestFullscreen) { /* Safari */
+          img.webkitRequestFullscreen();
+        } else if (img.msRequestFullscreen) { /* IE11 */
+          img.msRequestFullscreen();
+        }
       }
     </script>
   </body>
