--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
         height: 100%;
         overflow: hidden;
       }
-      img {
-        position: absolute;
+      #imagem {
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         object-fit: cover; /* Ensures the image covers the entire viewport */
+        z-index: -1; /* Ensures the image is behind other content */
       }
-    </style>
+      #content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+      resized
   </head>
   <body>
     <img id="imagem" src="image.png">
