--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <img id="imagem" src="image.png">
-    <button onclick="play()">Click ME!</button>
+    <button onclick="play()">Click me</button>
     <audio id="my_audio" src="audio.mp3" loop></audio>
 
     <script>
