--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <audio id="my_audio" src="audio.mp3" loop></audio>
 
     <script>
-      var play = function(){
+      play = function(){
         var audio = document.getElementById("my_audio");
 
         // Play the audio
