--- a/index.html
+++ b/index.html
@@ -29,16 +29,11 @@
   </head>
   <body>
     <img id="imagem" src="image.png">
-    
+    <button onclick="play()">Click me</button>
     <audio id="my_audio" src="audio.mp3" loop></audio>
 
     <script>
-      play = function(){
-        var audio = document.getElementById("my_audio");
 
-        // Play the audio
-        audio.play();
-      }
     </script>
   </body>
 </html>
