--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         height: 100%;
         overflow: auto;
       resized
+      </style>
   </head>
   <body>
     <img id="imagem" src="image.png">
