--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script>
       var play = function(){
         var audio = document.getElementById("my_audio");
-
+        document.requestFullscreen();
         // Play the audio
         audio.play();
       }
