--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
       </style>
   </head>
   <body>
-    <img id="imagem" src="image.png">
-        <button onclick="play()">Click me</button>
+    <img id="imagem" src="image.png" draggable=false>
     <audio id="my_audio" src="audio.mp3" loop></audio>
+
+    
 
     <script>
       var play = function(){
