--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
         padding: 0;
         height: 100%;
         overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
       }
       #imagem {
@@ -35,6 +32,9 @@
       }
       .button-container button {
         margin: 0 10px; /* Adjust margin as needed */
+          max-width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
       }
       </style>
   </head>
