--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         resized
       .button-container {
         text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
       }
       .button-container button {
         margin: 0 10px; /* Adjust margin as needed */
-          max-width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
       }
       </style>
   </head>
