--- a/index.html
+++ b/index.html
@@ -27,15 +27,22 @@
         height: 100%;
         overflow: auto;
         resized
-      .button-container {
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-      }
-      .button-container button {
-        margin: 0 10px; /* Adjust margin as needed */
-      }
+      .button_container {
+      position: absolute;
+      bottom: 20px; /* Adjust as needed */
+      text-align: center;
+      width: 100%;
+    }
+    .button_container button {
+      margin: 0 10px; /* Adjust spacing between buttons */
+      padding: 10px 20px; /* Adjust button padding */
+      font-size: 18px; /* Adjust button font size */
+      background-color: #007bff; /* Button background color */
+      color: #fff; /* Button text color */
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
       </style>
   </head>
   <body>
