--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         height: 100%;
         overflow: hidden;
     }
+    body {
+      background-image: url("image.png")
+    }
       }
       #imagem {
         position: fixed;
@@ -46,7 +49,6 @@
       </style>
   </head>
   <body>
-    <img id="imagem" src="image.png" draggable=false>
     <audio id="my_audio" src="audio.mp3" loop></audio>
 
     <div class="button_container">
