--- a/index.html
+++ b/index.html
@@ -9,27 +9,9 @@
         overflow: hidden;
     }
     body {
-      background-image: url("image.png")
+      background-image: url("image.png");
+      background-size: cover;
     }
-      }
-      #imagem {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover; /* Ensures the image covers the entire viewport */
-        z-index: -1; /* Ensures the image is behind other content */
-      }
-      #content {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 1;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        resized
       .button_container {
       position: absolute;
       bottom: 20px; /* Adjust as needed */
