--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
       width: 100%;
     }
     .button_container button {
-      margin: 0 15px; /* Adjust spacing between buttons */
+      margin: 0 45px; /* Adjust spacing between buttons */
       padding: 10px 20px; /* Adjust button padding */
-      font-size: 110px; /* Adjust button font size */
-      background-color: #007bff; /* Button background color */
+      font-size: 140px; /* Adjust button font size */
+      background-color: #7e0000; /* Button background color */
       color: #fff; /* Button text color */
       border: none;
-      border-radius: 5px;
+      border-radius: 25px;
       cursor: pointer;
+      transition: 0.1s ease;
+    }
+    .button_container button:hover {
+      background-color: #240000;
     }
       img {
         position: fixed;
