--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>THE NUMBER GAME</title>
+
+    <meta property="og:image" content="thumbnail.png">
+    
     <style>
       html, body {
         margin: 0;
