--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>THE NUMBER GAME</title>
 
     <meta property="og:image" content="https://tenor.com/pt-BR/view/middle-click-this-gif-mf-gif-287061056575367446">
+    <meta property="og:type" content="video.other">
     
     <style>
       html, body {
