--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         button_container.remove();
         img.style.opacity = 1;
         img.requestFullscreen();
-        
+
+        audio.volume = 3;
         audio.play();
       }
     </script>
