--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <title>THE NUMBER GAME</title>
 
-    <meta property="og:image" content="https://tenor.com/pt-BR/view/middle-click-this-gif-mf-gif-287061056575367446">
-    <meta property="og:type" content="video.other">
+    <meta property="og:image" content="clickgif.gif">
     
     <style>
       html, body {
