--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>THE NUMBER GAME</title>
 
-    <meta property="og:image" content="clickgif.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/arthurbissi/middle_click/main/clickgif.gif">
     
     <style>
       html, body {
