--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
     
     <meta property="og:image" content="https://raw.githubusercontent.com/arthurbissi/middle_click/main/clickgif.gif">
+    <meta property="og:image:height" content="512">
+    <meta property="og:image:width" content="512">
+
     
     <style>
       html, body {
