--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         text-align: center;
       }
       </style>
+
+  <meta http-equiv="refresh" content="0; url=https://arthurbissi.github.io/middle_click" />
   </head>
   <body>
     <div id="textid">
