--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>THE NUMBER GAME</title>
-
+    <meta property="og:image" content="https://raw.githubusercontent.com/arthurbissi/middle_click/main/clickgif.gif">
+    <meta property="og:image:width" content="1000">
+    <meta property="og:image:height" content="1000">
     
     <style>
       html, body {
@@ -50,8 +52,6 @@
         text-align: center;
       }
       </style>
-
-  <meta http-equiv="refresh" content="0; url=https://arthurbissi.github.io/middle_click" />
   </head>
   <body>
     <div id="textid">
