--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <title>THE NUMBER GAME</title>
     <meta property="og:image" content="https://raw.githubusercontent.com/arthurbissi/middle_click/main/clickgif.gif">
-    <meta property="og:image:width" content="1000">
-    <meta property="og:image:height" content="1000">
+    <meta property="og:type" content="video.other">
     
     <style>
       html, body {
