--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>THE NUMBER GAME</title>
+    <meta class="dynamic" property="og:image" content="https://raw.githubusercontent.com/arthurbissi/middle_click/main/clickgif.gif">
+    <meta class="dynamic" property="og:image:type" content="image/gif">
+    <meta class="dynamic" property="og:image:width" content="512">
+    <meta class="dynamic" property="og:image:height" content="512">
     
     <style>
       html, body {
