--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>THE NUMBER GAME</title>
+    <meta content="The Number Game">
+    <meta content="The Number Game é um ótimo jogo para se divertir e passar o tempo!" property="og:description">
+    <meta content="https://raw.githubusercontent.com/arthurbissi/middle_click/main/thumbnail.png" property="og:image">
+    
     <style>
       html, body {
         margin: 0;
